# TParallelImageBrightness

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  image.cpp  image.hpp  main.cpp  paths.h
